Now you can simply open this file on GitHub and click on the Google Collab link at the top of the file to run the code yourself Google Collab

--- a/TyphoidAnalysis.ipynb
+++ b/TyphoidAnalysis.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "e04727f3-d16d-408b-bdfe-bfb80db542f4",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/COLL-NOBEL/Data_Analysis_Project/blob/collins-branch/TyphoidAnalysis.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8f1865e2-fd6b-441e-94b4-164e3b030b38",
    "metadata": {},
    "source": [
@@ -48,16 +56,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 1,
    "id": "418454c5-81e2-45a4-a5da-cd1e13a77b64",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Loaded from local file.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import chi2_contingency\n",
-    "df = pd.read_csv(\"typ.csv\")"
+    "github_url = 'https://github.com/COLL-NOBEL/Data_Analysis_Project/blob/collins-branch/typ.csv'\n",
+    "\n",
+    "try:\n",
+    "    # Try loading locally\n",
+    "    df = pd.read_csv('typ.csv')\n",
+    "    print(\"✅ Loaded from local file.\")\n",
+    "except:\n",
+    "    # If anything goes wrong (file missing, wrong path, etc.), do this:\n",
+    "    print(\"🌐 Local file not found. Loading from GitHub...\")\n",
+    "    df = pd.read_csv(github_url)\n",
+    "    print(\"✅ Loaded from URL.\")"
    ]
   },
   {
